# RouteLLM

./: NOTICE  README.md  analyze_routers.py  collect_results.py  compare_all.sh  config.example.yaml  pyproject.toml  run_experiments.sh  sweep_mf.sh
docs/: ondevice_cloud_routing_experiment.md
lm_routing/: controller.py  local_pipeline.py
lm_routing/evals/: benchmarks.py  eval_bfcl_models.py  evaluate.py
lm_routing/routers/: routers.py
lm_routing/routers/matrix_factorization/: model.py  prepare_bfcl_data.py  train_matrix_factorization.py
lm_routing/routers/per_model/: model.py  train_per_model.py
lm_routing/routers/uniroute/: model.py  train_uniroute.py
routellm/: controller.py  local_pipeline.py
routellm/evals/: benchmarks.py  eval_bfcl_models.py  evaluate.py
routellm/routers/: routers.py
routellm/routers/matrix_factorization/: eval_bfcl_models.py  model.py  prepare_bfcl_data.py  train_matrix_factorization.py
routellm/routers/similarity_weighted/: utils.py
